# wake-ai

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_NEW.md  README_OLD.md  migration.md  prompt-writing.mdc  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.ai_workflows/: test_state.json
.claude/: 2025-01-09-audit-focused-design.md  2025-01-09-implementation-summary.md  2025-01-09-wake-ai-architecture.md  TODO.md  detect_patch.md  implementation_plan.md
.claude/memory/: dynamic_workflow_analysis.md  dynamic_workflow_plan.md
.claude/thoughts/: validation-alignment-guide.md  workflow-improvements.md
docs/: README.md  conditional_steps.md
docs/examples/: README.md  __init__.py  conditional_workflow.py  dynamic_workflow.py  extraction_workflow.py  hooks_workflow.py
docs/examples/conditional_test/: conditional_workflow.py
docs/examples/dynamic_steps/: README.md
docs/examples/extraction_step/: README.md
examples/: __init__.py
examples/conditional_test/: README.md
examples/extraction_step/: extraction_workflow.py
examples/reentrancy/: README.md
examples/reentrancy_test/: __init__.py  workflow.py
flows/: __init__.py  reentrancy_detector.py  uniswap_detector.py
flows/audit/: __init__.py  result.py  workflow.py
flows/audit/prompts/: 1-analyze-and-plan.md  2-manual-review.md  3-executive-summary.md
flows/donation_attack/: workflow.py
flows/example/: __init__.py  workflow.py
flows/examples/: README.md  __init__.py
flows/examples/hooks/: workflow.py
flows/examples/reentrancy/: README.md  __init__.py  workflow.py
flows/examples/reentrancy_test/: README.md
flows/hook_example/: README.md  __init__.py  workflow.py
flows/reentrancy/: workflow.py
flows/test/: __init__.py  workflow.py
flows/uniswap_integration/: workflow.py
flows/validation_test/: workflow.py
prompts/: generic-prompt-writing.md  generic-prompt-writing.mdc  wake-ai-flow-generation.md
wake/ai/: README.md  __init__.py  claude.py  detections.py  detector.py  detector_result.py  detector_result_mock.py  example_ai_detector.py  exceptions.py  flow.py  results.py  runner.py  tasks.py  templates.py  utils.py
wake/ai/commands/: 1-analyze-and-plan copy.md  audit.md
wake/ai/framework/: __init__.py  flow.py
wake/ai/prompts/: 0-initialize.md  1-analyze-and-plan.md  2-manual-review.md  2-static-analysis.md  3-executive-summary.md  3-manual-review.md  4-executive-summary.md  plan.md
wake/ai/workflows/: __init__.py  audit.py  security_audit.py  test.py  validation_test.py
wake/cli/: __main__.py  ai.py  detect.py
wake/detectors/: api.py
wake_ai/: README.md  __init__.py  cli.py  detections.py  results.py  runner.py  utils.py
wake_ai/audit/: __init__.py  results.py  workflow.py
wake_ai/audit/prompts/: 2-manual-review.md
wake_ai/core/: claude.py  flow.py  utils.py
wake_ai/example/: workflow.py
wake_ai/flows/audit/: __init__.py  result.py  workflow.py
wake_ai/flows/audit/prompts/: 2-manual-review.md  3-executive-summary.md
wake_ai/flows/donation_attack/: __init__.py
wake_ai/flows/uniswap_integration/: __init__.py
wake_ai/framework/: claude.py
wake_ai/templates/: __init__.py  markdown_detector.py  simple_detector.py
wake_ai/test/: workflow.py
wake_ai/utils/: __init__.py  audit.py  common.py  formatters.py  logging.py  workflow.py
wake_ai/validation_test/: __init__.py  workflow.py
wake_detectors/: __init__.py
wake_detectors/ai/: __init__.py
wake_detectors/ai/audit/: detector.py  workflow.py
wake_detectors/ai/audit/prompts/: 0-initialize.md  3-executive-summary.md  3-manual-review.md
wake_detectors/ai/detections/: __init__.py  detector.py  workflow.py
wake_detectors/ai/detections/prompts/: 2-manual-review.md
wake_detectors/ai/simple_detections/: __init__.py  detector.py  validator.py  workflow.py
wake_detectors/ai/simple_detections/prompts/: find-detections.md
wake_detectors/ai/test_detections/: __init__.py  detector.py
