[tool.poetry]
name = "wake-ai"
version = "0.1.0"
description = "AI-powered smart contract security analysis framework"
license = "ISC"
authors = ["Ackee Blockchain"]
readme = "README.md"
homepage = "https://github.com/Ackee-Blockchain/wake-ai"
repository = "https://github.com/Ackee-Blockchain/wake-ai"
keywords = ["ethereum", "solidity", "security", "ai", "audit", "smart-contracts", "claude"]
packages = [
    { include = "wake_ai" },
    { include = "flows" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0"
rich = "^13.3.2"
pyyaml = "^6.0"
typing-extensions = { version = ">=4.12", python = "<3.10" }

[tool.poetry.extras]
dev = ["black", "isort", "pytest", "pytest-asyncio", "mypy"]

[tool.poetry.scripts]
wake-ai = "wake_ai.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38"]
line-length = 88

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]